--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,3 @@
-/*
-	Name: Smashing HTML5
-	Date: July 2009
-	Description: Sample layout for HTML5 and CSS3 goodness.
-	Version: 1.0
-	Author: Enrique RamÃ­rez
-	Autor URI: http://enrique-ramirez.com
-*/
-
 /* Imports */
 @import url("reset.css");
 @import url("global-forms.css");
@@ -14,7 +5,7 @@
 /***** Global *****/
 /* Body */
 	body {
-		background: #F5F4EF url('../images/bg.png');
+		background: #F5F4EF;
 		color: #202C4B;
 		font-size: 87.5%; /* Base font size: 14px */
 		font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -36,7 +27,7 @@ h2 {
     font-size: 24px;
     text-decoration: underline;
 
-}	/* 22px */
+}
 h3 {font-size: 1.429em}	/* 20px */
 h4 {font-size: 1.286em}	/* 18px */
 h5 {font-size: 1.143em}	/* 16px */
